/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagement}"
    id 'java-library'
}

group 'fr.dademo.tools.lock'
archivesBaseName = 'dademo-dependencies-tools-lock_redis'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withJavadocJar()
    withSourcesJar()
}

dependencies {

    // Get Radisson right version matching our Spring release
    final radisson_version = "${springBootVersion}".replaceAll('\\.', '').substring(0, 2)

    api project(':modules:dependencies:tools:generic_tools')
    api project(':modules:dependencies:lock:lock_commons')

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation "org.redisson:redisson:${redissonVersion}"
    implementation "org.redisson:redisson-spring-data-${radisson_version}:${redissonVersion}"
    implementation "org.springframework.data:spring-data-redis:${springBootVersion}"

    // Other libraries
    implementation "jakarta.annotation:jakarta.annotation-api:${jakartaAnnotationApiVersion}"
    implementation "com.google.code.findbugs:jsr305:${findBugsJsr305Version}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

